# hermes-swarm-benchmark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
references/: benchmark-chart-generator-bugs-2026-05-09.md  benchmark-results.md  benchmark_chart_generator.py  benchmark_quick.py  chart-visual-spec.md  hardcoded-data-audit-2026-05-09.md  round-5-2026-05-09.md  run-2026-05-09-8a-2x4.md  run-9-real-benchmark-2026-05-09.md  session-state.md  session-v4-e2e-2026-05-09.md
scripts/: install_skill.sh
src/hermes_benchmark/: __init__.py  cli.py  report.py  schema.py  tasks.py
tests/: test_cli.py  test_install_script.py  test_report.py  test_tasks.py
